--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Installation:
 
     git clone git://github.com/memleaks/vimrc.git ~/.myvim
 
-Switch to the '~/.myvimrc' directory, and fetch submodules:
+Switch to the '~/.myvim' directory, and fetch submodules:
 
     cd ~/.myvim
     git submodule init
