--- a/README
+++ b/README
@@ -2,14 +2,9 @@ Installation:
 
     git clone git://github.com/memleaks/vimrc.git ~/.myvim
 
-Switch to the '~/.myvim' directory, and fetch submodules:
+Switch to the '~/.myvim' directory, execute setup script:
 
     cd ~/.myvim
-    git submodule init
-    git submodule update
-
-Execute setup script:
-
     sh setup.sh
 
 Done
